objects/gvp__Product_Set_Member__c.object
<CustomObject>
    <description>Associates a Product with a Product Set</description>
    <fields>
        <fullName>gvp__Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>gvp__Brand__c</referenceTo>
        <relationshipName>Product_Set_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>gvp__Item__c</referenceTo>
        <relationshipName>Product_Set_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Label</label>
        <referenceTo>gvp__Label__c</referenceTo>
        <relationshipName>Product_Set_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Position__c</fullName>
        <label>Position</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Product_Set__c</fullName>
        <label>Product Set</label>
        <referenceTo>gvp__Product_Set__c</referenceTo>
        <relationshipName>Product_Set_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product Set Member</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>gvp__All_Product_Sets</fullName>
        <columns>NAME</columns>
        <columns>gvp__Product_Set__c</columns>
        <columns>gvp__Brand__c</columns>
        <columns>gvp__Label__c</columns>
        <columns>gvp__Item__c</columns>
        <columns>gvp__Position__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Sets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PSM-{000000000}</displayFormat>
        <label>Product Set Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Set Member</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>gvp__Single_Product</fullName>
        <active>true</active>
        <description>Ensure that one and only one product (Item, Label, or Brand) is selected.</description>
        <errorConditionFormula>1 &lt;&gt; (
  IF(ISBLANK(gvp__Item__c), 0, 1) +
  IF(ISBLANK(gvp__Label__c), 0, 1) +
  IF(ISBLANK(gvp__Brand__c), 0, 1)
)</errorConditionFormula>
        <errorMessage>A single product (Item, Label, or Brand) must be selected.</errorMessage>
    </validationRules>
</CustomObject>